--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Padhmesh U
-logo: /assert/ME Casual oic.jpg
+logo: /assert/assert/ME Casual oic-photoaidcom-cropped.jpg
 #description: text below image
 # show_downloads: true
 theme: jekyll-theme-minimal
